--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@celo/contractkit": "^1.3.3",
+    "bignumber.js": "^9.0.1",
     "daisyui": "^1.16.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
