--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "vite-react-tailwind-jit-template",
-  "version": "0.0.0",
+  "name": "kafekita",
+  "version": "10.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --ext .jsx . --fix"
   },
   "dependencies": {
     "@celo/contractkit": "^1.3.3",
@@ -16,7 +18,16 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.3.7",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.3.11",
+    "prettier": "^2.5.0",
     "tailwindcss": "^2.2.17",
     "vite": "^2.6.4"
   }
