--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bignumber.js": "^9.0.1",
     "daisyui": "^1.16.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "ethereum-blockies": "^0.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
