--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "lazysizes": "^5.3.2",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
     "vite": "^2.6.14"
