implement web3 connect, user blockies, adn get cUSD balance

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@celo/contractkit": "^1.0.2",
     "bignumber.js": "^9.0.1",
+    "ethereum-blockies": "^0.1.1",
     "web3": "^1.6.1"
   },
   "devDependencies": {
