--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@celo/contractkit": "^1.0.2",
     "bignumber.js": "^9.0.1",
     "ethereum-blockies": "^0.1.1",
+    "lazysizes": "^5.3.2",
     "web3": "^1.6.1"
   },
   "devDependencies": {
